Add blacklisted websites to options

--- a/public/browser-extension.html
+++ b/public/browser-extension.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
 </head>
 <body>
-  <div data-vuetify>
+  <div data-vuetify-trustnet>
     <div id="app"></div>
   </div>
 </body>
