Fix empty space bug

--- a/public/browser-extension.html
+++ b/public/browser-extension.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div data-vuetify-trustnet>
-    <div id="app"></div>
+    <div id="trustnetApp"></div>
   </div>
 </body>
 </html>
